video page description fixed, pre-wrap added in CSS to display description properly and Link tag is parsed from it

--- a/public/assets/css/home.scss
+++ b/public/assets/css/home.scss
@@ -11,37 +11,3 @@
   min-height: 100vh;
   background-color: $theme-color;
 }
-
-.youtube-player {
-  position: relative;
-  overflow: hidden;
-  width: 100%;
-  padding-top: 56.25%;
-
-  iframe {
-    position: absolute;
-    top: 0;
-    left: 0;
-    bottom: 0;
-    right: 0;
-    width: 100%;
-    height: 100%;
-  }
-}
-
-
-.video-description {
-  width: calc(100% - 40px);
-  padding: 0 20px;
-
-  .title {
-    font-size: 18px;
-    margin-bottom: 10px;
-  }
-
-  .description {
-    font-size: 12px;
-    opacity: 0.7;
-    word-wrap: break-word;
-  }
-}
